Removed AWT classes from Model